--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-copy-clipboard-btn",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "dist/copy-clipboard-btn.umd.js",
   "module": "dist/copy-clipboard-btn.umd.js",
   "unpkg": "dist/copy-clipboard-btn.umd.js",
@@ -12,9 +12,10 @@
   },
   "devDependencies": {
     "postcss": "^8.4.4",
-    "rollup": "^2.60.2",
+    "rollup": "^2.61.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue2": "^0.8.1",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   }
