--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-copy-clipboard-btn",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "main": "dist/copy-clipboard-btn.umd.js",
   "module": "dist/copy-clipboard-btn.umd.js",
   "unpkg": "dist/copy-clipboard-btn.umd.js",
@@ -18,5 +18,8 @@
     "rollup-plugin-vue2": "^0.8.1",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
+  },
+  "dependencies": {
+    "clipboard": "^2.0.8"
   }
 }
